--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-sphinx
+sphinx~=3.3
 pybtex
 f90nml
 pandas
@@ -6,7 +6,7 @@ numpy
 nbsphinx
 exhale
 sphinxcontrib_programoutput
-sphinxcontrib.bibtex
+sphinxcontrib.bibtex~=2.4
 sphinx_comments
 sphinx_rtd_theme
 recommonmark
