--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-sphinx
+sphinx>=3
 pybtex
 f90nml
 pandas
@@ -12,3 +12,4 @@ sphinx_rtd_theme
 recommonmark
 docutils < 0.17
 sphinx-last-updated-by-git
+sphinx_rtd_theme>=0.5
