--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -36,6 +36,7 @@ jobs:
       - name: fix gfortran on mac
         run: |
           echo $PATH
+          which gfortran-11
           which gfortran-10
           ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
           which gfortran
