--- a/supy-driver/Makefile
+++ b/supy-driver/Makefile
@@ -83,7 +83,7 @@ clean:
 # clean all existing builds, rebuild f2py libs, build wheels and test
 test: main
 	$(PYTHON) -m pip install -e .
-	pytest -s ${MODULE}/test
+	$(PYTHON) -m pytest -s ${MODULE}/test
 
 # clean all existing builds, rebuild f2py libs, build wheels and install in dev mode
 dev:
