--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -11,7 +11,7 @@ sphinx_comments
 sphinx_rtd_theme
 recommonmark
 docutils < 0.17
-sphinx-book-theme
+sphinx-book-theme==0.1.6
 sphinx-panels
 sphinxcontrib.email
 sphinx-last-updated-by-git
