--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,fortran,jupyternotebooks,pycharm,pydev,python
@@ -348,3 +349,4 @@ problems.txt
 .vscode/
 log.test
 Test/fortran-notebook/test-fortran.ipynb
+Test/BaseRun/2021a/Output/
