--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -13,7 +13,9 @@ on:
     #   - test-dev
     #     - 'releases/*' # Push events to branches matching refs/heads/releases/*
     #     - '!refs/pull/*'
-    # tags:        # Array of patterns that match refs/tags.
+    tags-ignore:
+      - latest-dev # ignore this tag as it is created by this workflow
+#     tags:        # Array of patterns that match refs/tags.
     #   - supy_v*    # Push events to supy-driver
     #   - v*         # Push events to SUEWS
     paths: # Push events containing matching files
