--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -8,7 +8,8 @@ on:
     - cron:  '30 5 * * 6'
   # File paths to consider in the event. Optional; defaults to all
   push:
-    # branches:    # Array of patterns that match refs/heads
+    branches:    # Array of patterns that match refs/heads
+      - '**'
     #   - master     # Push events on master branch
     #   - test-dev
     #     - 'releases/*' # Push events to branches matching refs/heads/releases/*
