--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,4 @@ problems.txt
 .vscode/
 log.test
 Test/fortran-notebook/test-fortran.ipynb
-Test/BaseRun/2021a/Output/
+# Test/BaseRun/2021a/Output/
