add support in Makefile for Apple M1

--- a/Release/Makefile
+++ b/Release/Makefile
@@ -12,7 +12,12 @@ else
 		SUEWS_build_dir = $(addprefix $(SUEWS_build_base), Linux)
 	endif
 	ifeq ($(UNAME_S),Darwin) # macOS
-		SUEWS_build_dir = $(addprefix $(SUEWS_build_base), macOS)
+		UNAME_m := $(shell uname -m)
+		ifeq ($(UNAME_m),arm64) # arm64
+			SUEWS_build_dir = $(addprefix $(DIR_RELEASE_BASE_SUEWS), macOS_arm64)
+		else # x64
+			SUEWS_build_dir = $(addprefix $(DIR_RELEASE_BASE_SUEWS), macOS_x64)
+		endif
 	endif
 endif
 
