--- a/env.yml
+++ b/env.yml
@@ -23,18 +23,10 @@ dependencies:
   - recommonmark
   - pytables
   - scikit-image
-  - pip
   - black
   - fprettify
   - fortls
+  - salem
+  - pip
   - pip:
-    - exhale
-    - salem
-    - urlpath
-    - multiprocess
-    - sphinx-book-theme==0.1.6
-    - sphinx-panels
-    - sphinxcontrib.email
-    - sphinx-last-updated-by-git
-    - sphinx_rtd_theme>=0.5
-    - f90nml
+    - -r docs/requirements.txt
