improve robustness of SU in dealing with multi-layer layout

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,83 @@ Test/fortran-notebook/test-fortran.ipynb
 # Test/BaseRun/2021a/Output/
 Test/code/quick-test.py
 .fortls
+Test/BaseRun/2021a-gridlayout/RunControl.nml
+Test/BaseRun/2021a-gridlayout/Input/CBLInput.nml
+Test/BaseRun/2021a-gridlayout/Input/ESTMinput.nml
+Test/BaseRun/2021a-gridlayout/Input/GridLayouttest.nml
+Test/BaseRun/2021a-gridlayout/Input/GridLayouttest.nml.5-layer
+Test/BaseRun/2021a-gridlayout/Input/GridLayouttest.nml.save
+Test/BaseRun/2021a-gridlayout/Input/GridLayouttest1.nml
+Test/BaseRun/2021a-gridlayout/Input/InitialConditionstest_2004.nml
+Test/BaseRun/2021a-gridlayout/Input/InitialConditionstest1_2005_EndofRun.nml
+Test/BaseRun/2021a-gridlayout/Input/InitialConditionstest1_2005.nml
+Test/BaseRun/2021a-gridlayout/Input/InitialConditionstest2_2005_EndofRun.nml
+Test/BaseRun/2021a-gridlayout/Input/InitialConditionstest2_2005.nml
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_AnthropogenicEmission.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_BiogenCO2.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Conductance.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_ESTMCoefficients.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Irrigation.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_NonVeg.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_OHMCoefficients.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Profiles.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_SiteSelect.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_SiteSelect.txt.multigrid
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Snow.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Soil.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_SPARTACUS.nml
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Veg.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_Water.txt
+Test/BaseRun/2021a-gridlayout/Input/SUEWS_WithinGridWaterDist.txt
+Test/BaseRun/2021a-gridlayout/Input/test_2004_data_60.txt
+Test/BaseRun/2021a-gridlayout/Input/test_2004_data_60.txt.long
+Test/BaseRun/2021a-gridlayout/Input/test_2004_data_60.txt.short
+Test/BaseRun/2021a-gridlayout/Input/test_2005_data_5.txt
+Test/BaseRun/2021a-gridlayout/Input/test_2005_data_60.txt
+Test/BaseRun/2021a-gridlayout/Input/test1_2004_ESTM_Ts_data_5.txt
+Test/BaseRun/2021a-gridlayout/Input/test1_2004_ESTM_Ts_data_60.txt
+Test/BaseRun/2021a-gridlayout/Input/test1_2005_ESTM_Ts_data_5.txt
+Test/BaseRun/2021a-gridlayout/Input/test1_2005_ESTM_Ts_data_60.txt
+Test/BaseRun/2021a-gridlayout/Input/CBLinputfiles/CBL_initial_data.txt
+Test/BaseRun/2021a-gridlayout/Output/test_BEERS_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_DailyState_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_debug_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_ESTMExt_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_FileChoices.txt
+Test/BaseRun/2021a-gridlayout/Output/test_RSL_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_snow_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_SPARTACUS_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test_SUEWS_OutputFormat.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_BEERS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_DailyState.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_debug_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_ESTMExt_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_RSL_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_snow_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_SPARTACUS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_state_init.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2004_SUEWS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_BEERS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_DailyState.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_debug_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_ESTMExt_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_RSL_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_snow_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_SPARTACUS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_state_init.txt
+Test/BaseRun/2021a-gridlayout/Output/test1_2005_SUEWS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_BEERS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_DailyState.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_debug_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_ESTMExt_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_RSL_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_SPARTACUS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_state_init.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2004_SUEWS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_BEERS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_DailyState.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_debug_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_RSL_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_SPARTACUS_60.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_state_init.txt
+Test/BaseRun/2021a-gridlayout/Output/test2_2005_SUEWS_60.txt
