embed git commit hash info into binary

--- a/SUEWS-SourceCode/Makefile
+++ b/SUEWS-SourceCode/Makefile
@@ -56,6 +56,7 @@ variable   := $(shell $(grep) progname ${file})
 TARGET_str := $(lastword $(subst =, ,${variable})) # program name with quotes
 TARGET     := $(strip $(subst $\', ,${TARGET_str})) # program name
 VERSION    := $(lastword $(subst _V, ,${TARGET}))
+GIT_COMMIT :=$(shell git describe --always --dirty=-dirty || echo unknown:non-git)
 
 timestamp := $(shell date +"%Y%m%dT%H%M")
 EXECUTABLE := $(strip $(TARGET))_$(strip $(timestamp))
@@ -121,6 +122,7 @@ CPPFLAGS += -DNC_NETCDF4
 endif
 
 # Consolidate flags
+export SUEWS_VER = $(GIT_COMMIT)
 export FC
 export FCFLAGS = $(WARNFLAGS) $(BASICFLAGS) $(CPPFLAGS) \
 	$(STATIC)	\
@@ -193,6 +195,7 @@ DRIVER = suews_ctrl_driver.o
 OTHERS =  suews_ctrl_translate.o \
 	suews_ctrl_error.o \
 	suews_ctrl_init.o \
+	suews_ctrl_ver.o \
 	suews_ctrl_calculations.o
 
 # modules under rapid development
@@ -269,6 +272,7 @@ help:
 	@echo "  make PROFILE=<prof>"
 	@echo "where <prof> can be either 'gfortran' or 'ifort'."
 	@echo $(C_MODULE)
+	@echo $(SUEWS_VER)
 
 libspartacus: $(FILE_SRC_UTIL_SPTCS) $(FILE_SRC_RADTOOL_SPTCS) $(FILE_SRC_RAD_SPTCS)
 	mkdir -p $(DIR_LIB_SUEWS)
@@ -298,12 +302,21 @@ libdriver: $(addprefix $(DIR_SRC_SUEWS), $(C_MODULE) $(UTILS) $(PHYS) $(DRIVER))
 
 suews: libspartacus libdriver exe
 
+# special rule for generating version info file
+src/suews_ctrl_ver.f95:
+	@echo "generating version info file..."
+	@echo "MODULE version" > $@
+	@echo "IMPLICIT NONE" >> $@
+	@echo "CHARACTER(len=90) :: gitversion = '$(GIT_COMMIT)' " >> $@
+	@echo "END MODULE version" >> $@
+
 
 exe: $(addprefix $(DIR_SRC_SUEWS), $(OTHERS) suews_program$(suffix_code))
 	@echo  $(LIBUTILS) $(LIBPHYS) $(LIBDRIVER)
 	@echo $(TARGET) $(EXECUTABLE) $(OTHERS)
 	@echo Building SUEWS ...
 	$(FC) $(FCFLAGS) $^ -o $(DIR_BIN_SUEWS)/$(EXECUTABLE) $(LIBS)
+	@echo SUEWS built.
 	@echo $(TARGET) has been saved in $(DIR_BIN_SUEWS)
 	cd $(DIR_BIN_SUEWS) && ln -sf $(EXECUTABLE) $(TARGET)
 	mkdir -p $(DIR_RELEASE_SUEWS) && cp -f $(DIR_BIN_SUEWS)/$(EXECUTABLE) $(DIR_RELEASE_SUEWS)/$(TARGET)
@@ -343,8 +356,6 @@ clean-ext:
 $(C_MODULE): $(subst .o,.c, $(C_MODULE))
 	$(info $^)
 	$(CC) -c $^ -o $@
-
-
 
 
 
