--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -174,7 +174,7 @@ jobs:
     strategy:
       matrix:
         py: ["3.10", "3.9", "3.8", "3.7"]
-        os: [macOS-latest, windows-latest]
+        os: [macOS-latest, windows-2019]
 
     runs-on: ${{ matrix.os }}
     steps:
