update build&check workflow

--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -23,6 +23,7 @@ on:
       - "SUEWS-SourceCode/*"
       - "supy-driver/*"
       - ".github/workflows/build-SUEWS.yml"
+      - 'Test/BaseRun/*'
 
 
 jobs:
