fix fetching tags

--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -78,6 +78,7 @@ jobs:
         with:
           submodules: true
           token: ${{ secrets.PAT }}
+          fetch_depth: 0 # to get all tags
 
       - name: fix gfortran on mac
         if: startsWith(matrix.os, 'macOS')
@@ -152,6 +153,7 @@ jobs:
         with:
           submodules: true
           token: ${{ secrets.PAT }}
+          fetch_depth: 0 # to get all tags
 
       - name: build for ${{ matrix.manylinux-python-target }}
         run: |
@@ -184,6 +186,7 @@ jobs:
         with:
           submodules: true
           token: ${{ secrets.PAT }}
+          fetch_depth: 0 # to get all tags
 
       - name: fix gfortran on mac
         if: startsWith(matrix.os, 'macOS')
