--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -181,8 +181,8 @@ jobs:
         py: ["3.10"]
         # py: ["3.10", "3.9", "3.8", "3.7"]
         # os: [macOS-latest, windows-latest]
-        # os: [macOS-latest]
-        os: [windows-latest]
+        os: [macOS-latest]
+        # os: [windows-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -192,7 +192,7 @@ jobs:
           token: ${{ secrets.PAT }}
           fetch-depth: 0 # to get all tags
 
-      - name: fix gfortran on mac
+      - name: mac specific settings
         if: startsWith(matrix.os, 'macOS')
         run: |
           echo $PATH
@@ -200,6 +200,7 @@ jobs:
           ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
           which gfortran
           gfortran --version
+          export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
 
       - name: set up py${{ matrix.py }}
         uses: actions/setup-python@v2
@@ -207,13 +208,12 @@ jobs:
           python-version: ${{ matrix.py }} # Version range or exact version of a Python version to use, using semvers version range syntax.
           architecture: "x64" # (x64 or x86)
 
-      # remote debugging
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
+      # # remote debugging
+      # - name: Setup upterm session
+      #   uses: lhotari/action-upterm@v1
 
       - name: build supy-driver
         run: |
-          export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
           make driver
 
       - name: Store the ${{ matrix.py }} wheel
