--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -130,111 +130,153 @@ jobs:
           files: |
             SUEWS-release/SUEWS_*_*.zip
 
+  build_wheels:
+      name: Build wheels on ${{ matrix.os }}
+      runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [ubuntu-20.04, windows-2019, macos-11]
 
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            submodules: true
+            token: ${{ secrets.PAT }}
+            fetch-depth: 0 # to get all tags
 
-  build-wheels-manylinux:
-    # needs: test-suews
+        - name: Build wheels
+          uses: pypa/cibuildwheel@v2.9.0
+          env:
+            SETUPTOOLS_ENABLE_FEATURES: legacy-editable
+          with:
+            package-dir: supy-driver
+            output-dir: wheelhouse
+            config-file: "{package}/pyproject.toml"
 
+        - uses: actions/upload-artifact@v3
+          with:
+            path: ./wheelhouse/*.whl
+
+  build_sdist:
+    name: Build source distribution
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        manylinux-python-target:
-          # NOTE: Must be from this list:
-          # NOTE: $ docker run -it --rm quay.io/pypa/manylinux2014_x86_64
-          # NOTE:   ls -1 /opt/python
-          - cp310-cp310
-          # - cp39-cp39
-          # - cp38-cp38
-          # - cp37-cp37m
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
           token: ${{ secrets.PAT }}
           fetch-depth: 0 # to get all tags
 
-      # # remote debugging
-      # - name: Setup upterm session
-      #   uses: lhotari/action-upterm@v1
+      - name: Build sdist
+        run: pipx run build --sdist
 
-      # for debugging this:
-      # docker run -it -v $(pwd):/io --rm quay.io/pypa/manylinux2014_x86_64
-      - name: build for ${{ matrix.manylinux-python-target }}
-        run: |
-          docker run -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c \
-          "yum install glibc-static -y; cd /io/supy-driver; make suews"
-          docker run -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c \
-          "ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/bin/python; \
-          ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/local/bin/python; \
-          which python;\
-          python -m pip install -U pip pytest --user; \
-          cd /io/supy-driver; \
-          export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"; \
-          echo $SETUPTOOLS_ENABLE_FEATURES; \
-          make test"
-
-      - name: Store ${{ matrix.manylinux-python-target }} binary wheel
-        uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
-          name: python-package-distributions
-          path: supy-driver/wheelhouse/
+          path: dist/*.tar.gz
 
-  build-wheels-mac_win:
-    needs: test-suews
+  # build-wheels-manylinux:
+  #   # needs: test-suews
 
-    strategy:
-      matrix:
-        py: ["3.10"]
-        # py: ["3.10", "3.9", "3.8", "3.7"]
-        os: [macOS-latest, windows-latest]
-        # os: [macOS-latest]
-        # os: [windows-latest]
+  #   runs-on: ubuntu-latest
 
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-          token: ${{ secrets.PAT }}
-          fetch-depth: 0 # to get all tags
+  #   strategy:
+  #     matrix:
+  #       manylinux-python-target:
+  #         # NOTE: Must be from this list:
+  #         # NOTE: $ docker run -it --rm quay.io/pypa/manylinux2014_x86_64
+  #         # NOTE:   ls -1 /opt/python
+  #         - cp310-cp310
+  #         # - cp39-cp39
+  #         # - cp38-cp38
+  #         # - cp37-cp37m
 
-      - name: mac specific settings
-        if: startsWith(matrix.os, 'macOS')
-        run: |
-          echo $PATH
-          which gfortran-10
-          ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
-          which gfortran
-          gfortran --version
-          export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         submodules: true
+  #         token: ${{ secrets.PAT }}
+  #         fetch-depth: 0 # to get all tags
 
-      - name: set up py${{ matrix.py }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.py }} # Version range or exact version of a Python version to use, using semvers version range syntax.
-          architecture: "x64" # (x64 or x86)
+  #     # # remote debugging
+  #     # - name: Setup upterm session
+  #     #   uses: lhotari/action-upterm@v1
 
-      # # remote debugging
-      # - name: Setup upterm session
-      #   uses: lhotari/action-upterm@v1
+  #     # for debugging this:
+  #     # docker run -it -v $(pwd):/io --rm quay.io/pypa/manylinux2014_x86_64
+  #     - name: build for ${{ matrix.manylinux-python-target }}
+  #       run: |
+  #         docker run -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c \
+  #         "yum install glibc-static -y; cd /io/supy-driver; make suews"
+  #         docker run -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c \
+  #         "ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/bin/python; \
+  #         ln -sf /opt/python/${{ matrix.manylinux-python-target }}/bin/python /usr/local/bin/python; \
+  #         which python;\
+  #         python -m pip install -U pip pytest --user; \
+  #         cd /io/supy-driver; \
+  #         export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"; \
+  #         echo $SETUPTOOLS_ENABLE_FEATURES; \
+  #         make test"
 
-      - name: build supy-driver
-        run: |
-          make driver
+  #     - name: Store ${{ matrix.manylinux-python-target }} binary wheel
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: python-package-distributions
+  #         path: supy-driver/wheelhouse/
 
-      - name: Store the ${{ matrix.py }} wheel
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-package-distributions
-          path: supy-driver/dist/
+  # build-wheels-mac_win:
+  #   needs: test-suews
+
+  #   strategy:
+  #     matrix:
+  #       py: ["3.10"]
+  #       # py: ["3.10", "3.9", "3.8", "3.7"]
+  #       os: [macOS-latest, windows-latest]
+  #       # os: [macOS-latest]
+  #       # os: [windows-latest]
+
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         submodules: true
+  #         token: ${{ secrets.PAT }}
+  #         fetch-depth: 0 # to get all tags
+
+  #     - name: mac specific settings
+  #       if: startsWith(matrix.os, 'macOS')
+  #       run: |
+  #         echo $PATH
+  #         which gfortran-10
+  #         ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran
+  #         which gfortran
+  #         gfortran --version
+  #         export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
+
+  #     - name: set up py${{ matrix.py }}
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: ${{ matrix.py }} # Version range or exact version of a Python version to use, using semvers version range syntax.
+  #         architecture: "x64" # (x64 or x86)
+
+  #     # # remote debugging
+  #     # - name: Setup upterm session
+  #     #   uses: lhotari/action-upterm@v1
+
+  #     - name: build supy-driver
+  #       run: |
+  #         make driver
+
+  #     - name: Store the ${{ matrix.py }} wheel
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: python-package-distributions
+  #         path: supy-driver/dist/
 
   deploy:
     name: Publish 🐍📦 to (Test)PyPI
     needs:
       # - build-wheels-manylinux
-      - build-wheels-mac_win
+      - build_wheels
     runs-on: ubuntu-latest
 
     steps:
