--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -1,2 +1,8 @@
 [build-system]
 requires = ["wheel", "setuptools", "oldest-supported-numpy"]
+
+
+[tool.cibuildwheel]
+before-build = [
+    "make suews",
+]
