--- a/supy-driver/pyproject.toml
+++ b/supy-driver/pyproject.toml
@@ -13,3 +13,4 @@ before-all = "yum install -y glibc-static"
 
 [tool.cibuildwheel.macos]
 before-all = 'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran'
+archs = ["x86_64", "universal2", "arm64"]
