--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -154,9 +154,9 @@ jobs:
           env:
             SETUPTOOLS_ENABLE_FEATURES: legacy-editable
           with:
-            package-dir: supy-driver
+            package-dir: ./
             output-dir: wheelhouse
-            config-file: "{package}/pyproject.toml"
+            config-file: "{package}/supy-driver/pyproject.toml"
 
         - uses: actions/upload-artifact@v3
           with:
