--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -134,9 +134,10 @@ jobs:
       name: Build wheels on ${{ matrix.os }}
       runs-on: ${{ matrix.os }}
       strategy:
+        fail-fast: false
         matrix:
-          # os: [ubuntu-20.04, windows-2019, macos-11]
-          os: [ubuntu-20.04]
+          os: [ubuntu-20.04, windows-2019, macos-11]
+          # os: [ubuntu-20.04]
 
       steps:
         - uses: actions/checkout@v3
@@ -145,9 +146,9 @@ jobs:
             token: ${{ secrets.PAT }}
             fetch-depth: 0 # to get all tags
 
-        # remote debugging
-        - name: Setup upterm session
-          uses: lhotari/action-upterm@v1
+        # # remote debugging
+        # - name: Setup upterm session
+        #   uses: lhotari/action-upterm@v1
 
         - name: Build wheels
           uses: pypa/cibuildwheel@v2.9.0
