--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -155,7 +155,7 @@ jobs:
           env:
             SETUPTOOLS_ENABLE_FEATURES: legacy-editable
           with:
-            package-dir: ./
+            package-dir: .
             output-dir: wheelhouse
             config-file: "{package}/supy-driver/pyproject.toml"
 
